Fix card button line break on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -473,13 +473,16 @@ body {
 }
 
 .project-card > .card-icons {
-  align-self: flex-end;
   position: absolute;
   top: 78%;
+  width: 75%;
+
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .card-icons > img + img {
-  margin-left: 1.3em;
+  margin-left: 0;
 }
 
 .cards-container .project-card {
@@ -806,7 +809,7 @@ h3 {
   }
 
   .card-text {
-    margin-bottom: 20%;
+    margin-bottom: 25%;
   }
 
   .project-card > .article-title {
